# duatic_dynaarm_bringup

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml  repos.list
.github/workflows/: build-jazzy.yml
config/: controllers.yaml  controllers_sim.yaml
launch/: mock.launch.py  real.launch.py  sim.launch.py
